# fastapi_zero

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5e6ba8806d7e_baseline.py  8e7770ede790_criando_campo_senha_na_tabela_comments.py
fastapi_zero/: app.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  users.py
fastapi_zero/sqlalchemy/: wip.py  wip_.py
fastapi_zero/sqlalchemy/models/: __init__.py  comment.py
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 392ca124d346_criaçao_do_banco_de_forma_correta.py  cf539e08c767_alter_table_user_add_column_updated_at.py  fbd5bb4da12b_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
